--- a/MPWIKI/views/harley.hbs
+++ b/MPWIKI/views/harley.hbs
@@ -3,6 +3,7 @@
 <head>
 <title>Harley Davidson</title>
 <link rel="stylesheet" href="css/harleyStyle.css" type="text/css" />
+<link rel="stylesheet" href="css/footer.css" type="text/css" />
 <script src="js/harley.js"></script>
 </head>
 <body>
@@ -13,6 +14,9 @@
 </div>
 <div class="image">
 <img src="images/panhead.jpg" id="harleyKuva">
+</div>
+<div>
+  {{> footer}}
 </div>
 </body>
 </html>
