--- a/MPWIKI/views/honda.hbs
+++ b/MPWIKI/views/honda.hbs
@@ -3,6 +3,7 @@
 <head>
 <title>Harley Davidson</title>
 <link rel="stylesheet" href="css/hondaStyle.css" type="text/css" />
+<link rel="stylesheet" href="css/footer.css" type="text/css" />
 <script src="js/honda.js"></script>
 </head>
 <body>
@@ -14,6 +15,9 @@ Honda oli vuonna 2015 maailman suurin moottorinvalmistaja.[1] Honda valmistaa jo
 </div>
 <div class="image">
 <img src="images/hondaKuva.jpg" id="hondaKuva">
+</div>
+<div>
+  {{> footer}}
 </div>
 </body>
 </html>
