--- a/MPWIKI/views/index.hbs
+++ b/MPWIKI/views/index.hbs
@@ -3,6 +3,7 @@
 <title>Moottoripyörä Wiki</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="css/style.css" type="text/css" />
+<link rel="stylesheet" href="css/footer.css" type="text/css" />
 <script src="js/index.js"></script>
 </head>
 <body>
@@ -62,18 +63,13 @@ Moottoripyörä on moottoripyörä, skootteri on lälläripyörä,
 Namusia naisia katsastan, moottoripyörällä, moottoripyörällä, moottoripyörällä ratsastan.
 </br></br></p>
 </div>
-</div>
 </br>
 <div class="fixed">
 <a href="https://www.nettimoto.com">  <img src="images/nettimotoLogo.png" width="100px"></a>
 </div>
-<div id="footer">
-  <div class="wrap">
-    <div id="col">
-      <p id="alatxt">Copyright 2018 </br> Kim Rekilä, Oskar Sundholm, Lauri Rantasalo, Mika Sundqvist</p>
-    </div>
-    <div class="clear"></div>
-  </div>
+<div>
+  {{> footer}}
+</div>
 </div>
 </body>
 </html>
