--- a/MPWIKI/views/triumph.hbs
+++ b/MPWIKI/views/triumph.hbs
@@ -3,6 +3,7 @@
 <head>
 <title>Harley Davidson</title>
 <link rel="stylesheet" href="css/triumphStyle.css" type="text/css" />
+<link rel="stylesheet" href="css/footer.css" type="text/css" />
 <script src="js/triumph.js"></script>
 </head>
 <body>
@@ -14,6 +15,9 @@ Tämä artikkeli käsittelee molempia - historiallista Triumphia ja modernia yht
 </div>
 <div class="image">
 <img src="images/triumphKuva.jpg" id="triumphKuva">
+</div>
+<div>
+  {{> footer}}
 </div>
 </body>
 </html>
