Added new partials

--- a/MPWIKI/views/index.hbs
+++ b/MPWIKI/views/index.hbs
@@ -4,7 +4,10 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 <link rel="stylesheet" href="css/footer.css" type="text/css" />
+<link rel="stylesheet" href="css/header.css" type="text/css" />
+<link rel="stylesheet" href="css/fixed.css" type="text/css" />
 <script src="js/index.js"></script>
+{{> responsive}}
 </head>
 <body>
 <div class="wrap">
@@ -64,9 +67,7 @@ Namusia naisia katsastan, moottoripyörällä, moottoripyörällä, moottoripyö
 </br></br></p>
 </div>
 </br>
-<div class="fixed">
-<a href="https://www.nettimoto.com">  <img src="images/nettimotoLogo.png" width="100px"></a>
-</div>
+  {{> fixed}}
 <div>
   {{> footer}}
 </div>
