--- a/MPWIKI/views/harley.hbs
+++ b/MPWIKI/views/harley.hbs
@@ -4,10 +4,14 @@
 <title>Harley Davidson</title>
 <link rel="stylesheet" href="css/harleyStyle.css" type="text/css" />
 <link rel="stylesheet" href="css/footer.css" type="text/css" />
+<link rel="stylesheet" href="css/fixed.css" type="text/css" />
+<link rel="stylesheet" href="css/header.css" type="text/css" />
 <script src="js/harley.js"></script>
+{{> responsive}}
 </head>
 <body>
-<h1><button type="button" class="button" id="wikiButton">MoottoripyöräWiki</button></h1>
+    {{> header}}
+<h1><button type="button" class="button" id="wikiButton">Etusivu</button></h1>
 <div class="info">
 <i>"Harley-Davidson Motor Company on moottoripyöriä valmistava yhdysvaltalainen yhtiö, jonka perustivat William s. Harley ja Arthur Davidson vuonna 1903.
   Harley-Davidsonin kotipaikka on Milwaukee, Wisconsinin osavaltiossa."</i> -Wikipedia
@@ -16,6 +20,7 @@
 <img src="images/panhead.jpg" id="harleyKuva">
 </div>
 <div>
+  {{> fixed}}
   {{> footer}}
 </div>
 </body>
