--- a/MPWIKI/views/suzuki.hbs
+++ b/MPWIKI/views/suzuki.hbs
@@ -3,19 +3,24 @@
 <head>
 <title>Harley Davidson</title>
 <link rel="stylesheet" href="css/suzukiStyle.css" type="text/css" />
+<link rel="stylesheet" href="css/header.css" type="text/css" />
 <link rel="stylesheet" href="css/footer.css" type="text/css" />
+<link rel="stylesheet" href="css/fixed.css" type="text/css" />
 <script src="js/suzuki.js"></script>
+{{> responsive}}
 </head>
 <body>
+  {{> header}}
 <h1><button type="button" class="button" id="wikiButton">MoottoripyöräWiki</button></h1>
 <div class="info">
   <i>"Suzuki on japanilainen moottoripyörien, mopojen, autojen sekä perämoottorien valmistaja. Se on perustettu vuonna 1909. Urheilussa Suzuki on menestynyt paremmin moottoripyöräilyssä kuin autoissa. Road racingin MM-sarjassa Suzukin kulta-aika oli vuosina 1976-1982, jolloin se voitti seitsemän 500-kuutioisten valmistajien maailmanmestaruutta.
-  Autonvalmistuksessa Suzuki keskittyy pikkuautoihin ja maastureihin. Kuuluisin Suzukin valmistama auto lienee Suzuki SJ -maastoauto." </i> -Wikipedia
+  Autonvalmistuksessa Suzuki keskittyy pikkuautoihin ja maastureihin. Kuuluisin Suzukin valmistama auto lienee Suzuki SJ -maastoauto. Nekin on tosi hyviä pyöriä" </i> -Wikipedia
 </div>
 <div class="image">
 <img src="images/suzukiKuva.jpg" id="suzukiKuva">
 </div>
 <div>
+  {{> fixed}}
   {{> footer}}
 </div>
 </body>
